[package]
name = "black-hat"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1.0.44"
anyhow = "1.0.72"
rayon = "1.5.3"
trust-dns-resolver = "0.22.0"
reqwest = { version = "0.11.18", default-features = false, features = ["json", "blocking", "rustls-tls"] }
serde = { version = "1.0.178", features = ["derive"] }
